<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.varoa.gituser.ui.search.SearchViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/AppTheme.Toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:menu="@menu/main_menu"
                app:titleTextColor="@color/colorIcons" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/searchField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/smaller_margin"
                    android:hint="@string/search_term"
                    app:endIconDrawable="@android:drawable/ic_menu_search"
                    app:endIconTint="@color/colorPrimary"
                    app:helperText="@string/search_field_helper"
                    app:layout_constraintBottom_toTopOf="@id/searchSrl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/searchSrl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/smaller_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/searchField">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/searchRv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        app:toggleVisibility="@{!viewModel.isSearchResultEmpty()}"
                        tools:itemCount="16"
                        tools:listitem="@layout/item_user" />

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <ImageView
                    android:id="@+id/searchPlaceholder"
                    android:layout_width="@dimen/larger_vector"
                    android:layout_height="@dimen/larger_vector"
                    android:contentDescription="@string/img_placeholder"
                    android:src="@drawable/ic_no_internet"
                    android:tint="@color/colorPrimary"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:toggleVisibility="@{viewModel.isSearchResultEmpty()}" />

                <TextView
                    android:id="@+id/searchPlaceholderText"
                    style="@style/TextGitUser.Title"
                    android:text="@string/no_result"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/searchPlaceholder"
                    app:toggleVisibility="@{viewModel.isSearchResultEmpty()}" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>